# spectrumlab-spectral-line

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.cfg
demo/: app.ipynb
notebooks/: article2025 (different-lines).ipynb  article2025 (temperature-dependence).ipynb  phd2024 (line-shape).ipynb
src/spectrumlab_line_shape/: line.py  utils.py
src/spectrumlab_line_shape/shapes/: __init__.py  estimator.py  shapes.py
src/spectrumlab_spectral_line/: constants.py  estimators.py  line.py  utils.py
src/spectrumlab_spectral_line/shapes/: __init__.py  shapes.py
tests/: test_estimator.py
