[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spectrumlab-spectral-line"
dynamic = ["version"]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "spectrumlab",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "faker>=33.3.1",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mock>=3.14.0",
]
notebooks = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "notebook>=7.3.2",
]

dev = [
    {include-group = "linting"},
    {include-group = "testing"},
    {include-group = "notebooks"},
]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
spectrumlab = { git = "https://github.com/Exinker/spectrumlab", branch="master" }
